# Exploring-in-Uneven-Terrain

./: .gitattributes  lkh.rar  mapdata1.txt  mapdata2.txt  mapdata3.txt  readme  start.sh  文件目录关系
CASE论文实验结果/: readme
CASE论文实验结果/Baseline-场景1/: efficiency1.txt  efficiency2.txt  efficiency3.txt  efficiency4.txt  efficiency5.txt  traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt
CASE论文实验结果/Baseline-场景2/: efficiency1.txt  efficiency2.txt  efficiency3.txt  efficiency4.txt  efficiency5.txt  traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt
CASE论文实验结果/Baseline-场景3/: efficiency1.txt  efficiency2.txt  efficiency3.txt  efficiency4.txt  efficiency5.txt  traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt
CASE论文实验结果/F-R-场景1/: efficiency1.txt  efficiency2.txt  efficiency3.txt  efficiency4.txt  efficiency5.txt  traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt
CASE论文实验结果/F-R-场景2/: efficiency1.txt  efficiency2.txt  efficiency3.txt  efficiency4.txt  efficiency5.txt  traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt
CASE论文实验结果/F-R-场景3/: efficiency1.txt  efficiency2.txt  efficiency3.txt  efficiency4.txt  efficiency5.txt  traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt
CASE论文实验结果/F-场景1/: efficiency1.txt  efficiency2.txt  efficiency3.txt  efficiency4.txt  efficiency5.txt  traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt
CASE论文实验结果/F-场景2/: efficiency1.txt  efficiency2.txt  efficiency3.txt  efficiency4.txt  efficiency5.txt  traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt
CASE论文实验结果/F-场景3/: efficiency1.txt  efficiency2.txt  efficiency3.txt  efficiency4.txt  efficiency5.txt  traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt
bspline/: CMakeLists.txt  package.xml
bspline/include/: bucketedqueue.h  dynamicvoronoi.hpp  non_uniform_bspline.h  point.h
bspline/src/: bucketedqueue.cpp  dynamicvoronoi.cpp  non_uniform_bspline.cpp
hybridA/: CMakeLists.txt  package.xml
hybridA/include/: HybridA_interface.hpp  collisiondetection.h  constants.h  node3d.h  path.h  planner.h
hybridA/src/: HybridA_interface.cpp  algorithm.cpp  collisiondetection.cpp  main.cpp  node3d.cpp  planner.cpp  smoother.cpp
mpc_solver/: CMakeLists.txt  package.xml
mpc_solver/include/: mpc_control_node.hpp
mpc_solver/launch/: mpc.launch
mpc_solver/param/: control_param.yaml
mpc_solver/src/: mpc_control_node.cpp
planeoct_server/: CMakeLists.txt  package.xml
planeoct_server/include/: Teclas.hpp  astar_planner.h  subspace.hpp  surfeltree.hpp
planeoct_server/launch/: t.launch
planeoct_server/src/: Teclas-with-depth-gradient.cpp  Teclas-without-depth-gradient copy.cpp  Teclas.cpp  output.txt  pr30.par  subspace.cpp  surfeltree.cpp  vp6.atsp  关于建图的思考.txt  相关信息
planner_server/: CMakeLists.txt  package.xml
planner_server/include/: addition.h  planner.hpp  spectral_clustering.hpp
planner_server/launch/: pla.launch
planner_server/param/: default.rviz  example.yaml  uneven.rviz  vehicle_simulator.rviz
planner_server/src/: astar_planner.cpp  planner.cpp  spectral_clustering.cpp  修改思路
show_data/: CMakeLists.txt  package.xml
show_data/src/: show_data.cpp
srvbg/: CMakeLists.txt  package.xml
srvbg/srv/: getlcplan.srv  gridmap.srv  mpcref.srv  path2nbv.srv
